[gd_scene load_steps=5 format=3 uid="uid://bkjn6tmtteiyh"]

[ext_resource type="Script" path="res://components/StoneBookItem.gd" id="1_xhqg8"]
[ext_resource type="Texture2D" uid="uid://beddhs43sdka1" path="res://images/Logro_Base_1.png" id="2_ry2wk"]
[ext_resource type="LabelSettings" uid="uid://dhtvba1f1kock" path="res://theme/title__book_label_settings.tres" id="3_3sm4o"]
[ext_resource type="LabelSettings" uid="uid://bv8u170pit58j" path="res://theme/text_book_label_settings.tres" id="4_pshcf"]

[node name="StoneBookItem" type="Control"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 3
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.698
offset_right = -864.0
offset_bottom = -64.304
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_xhqg8")

[node name="IconStone2" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("2_ry2wk")
expand_mode = 1

[node name="IconStone" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 9.0
offset_top = 10.0
offset_right = 57.0
offset_bottom = 58.0
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 7.0
offset_right = 196.0
offset_bottom = 67.0
theme_override_constants/separation = 1

[node name="TitleStoneLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.184314, 0.105882, 0.0509804, 1)
label_settings = ExtResource("3_3sm4o")

[node name="DescriptionStoneLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.184314, 0.105882, 0.0509804, 1)
theme_override_font_sizes/font_size = 12
label_settings = ExtResource("4_pshcf")
